fixed github button on contact, not scaling on Iphone correctly

--- a/Kyles-Website/src/components/contact/Contact.module.css
+++ b/Kyles-Website/src/components/contact/Contact.module.css
@@ -69,6 +69,10 @@
     text-decoration: none;
   }
 
-  @media (min-width: 700px) {
+  @media (max-width: 700px) {
+
+    .githubbutton {
+      width: 160px;
+    }
 
   }
